--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,21 +1,59 @@
-name: Build_APK
+name: Build Kivy APK
 
 on:
-  workflow_dispatch:   # Manual run from the Actions tab
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  build-android:
+  build:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write   # Required to upload artifacts
-
     steps:
-      - name: Checkout repository
+      # Checkout your repo
+      - name: Checkout repo
         uses: actions/checkout@v4
-        
-      - name: Buildozer-Kivy-Apk-Creator
-        uses: wildspider57389928/Buildozer-Kivy-APK_Creator@4.0.0
+
+      # Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          project-dir: .
-          command: buildozer android debug
+          python-version: "3.10"
+
+      # Install system dependencies
+      - name: Install system dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            openjdk-17-jdk \
+            unzip zip \
+            libffi-dev \
+            libssl-dev \
+            python3-dev \
+            python3-setuptools \
+            python3-wheel \
+            android-sdk \
+            android-sdk-platform-tools
+
+      # Accept Android SDK licenses and install build-tools
+      - name: Install Android SDK build-tools
+        run: |
+          yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+
+      # Install Python dependencies (Cython + Buildozer)
+      - name: Install Python dependencies
+        run: |
+          pip install --upgrade pip
+          pip install cython buildozer
+
+      # Build APK (debug)
+      - name: Build APK (debug)
+        run: buildozer android debug
+
+      # Upload APK artifact
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: kivy-apk
+          path: bin/*.apk
