--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,59 +1,25 @@
-name: Build Kivy APK
-
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
+name: Build
+on: [push, pull_request]
 
 jobs:
-  build:
+  # Build job. Builds app for Android with Buildozer
+  build-android:
+    name: Build for Android
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout your repo
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      # Set up Python
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Build with Buildozer
+        uses: ArtemSBulgakov/buildozer-action@v1
+        id: buildozer
         with:
-          python-version: "3.10"
+          workdir: test_app
+          buildozer_version: stable
 
-      # Install system dependencies
-      - name: Install system dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y \
-            openjdk-17-jdk \
-            unzip zip \
-            libffi-dev \
-            libssl-dev \
-            python3-dev \
-            python3-setuptools \
-            python3-wheel \
-            android-sdk \
-            android-sdk-platform-tools
-
-      # Accept Android SDK licenses and install build-tools
-      - name: Install Android SDK build-tools
-        run: |
-          yes | sdkmanager --licenses
-          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
-
-      # Install Python dependencies (Cython + Buildozer)
-      - name: Install Python dependencies
-        run: |
-          pip install --upgrade pip
-          pip install cython buildozer
-
-      # Build APK (debug)
-      - name: Build APK (debug)
-        run: buildozer android debug
-
-      # Upload APK artifact
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
         with:
-          name: kivy-apk
-          path: bin/*.apk
+          name: package
+          path: ${{ steps.buildozer.outputs.filename }}
